src/index.css
@import url('https://fonts.googleapis.com/css?family=Manrope');

body {
  margin: 0;
  font-family: 'manrope', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
  monospace;
}

